--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <button onclick="clickForDate" id="btn" type="button">click for date</button>
       </div>
       <div class="date"><p id="displayDate">...</p></div>
+      <div><p class="content" id="para1">info</p></div>
+      <div><p class="content" id="para2">info</p></div>
+      <div><p class="content" id="para3">info</p></div>
+      <div><p class="content" id="para4">info</p></div>
+      <div><form action=""></form></div>
+      <div class="temp-converter"><h2 id="temp">...</h2></div>
     </div>
-
     <script src="app.js"></script>
   </body>
 </html>
